--- a/templates/home.html
+++ b/templates/home.html
@@ -3,23 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <h6>Hello World</h6>
     <script src="https://js.stripe.com/v2/"></script>
     <script src="https://js.stripe.com/v3/"></script>
     <script>Stripe.setPublishableKey("pk_test_lYpC3klMwJoufI6S2ajDtob5")</script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-<h2>Buy for €650.00</h2>
-<form action="{% url 'charge' %}" method="post">
-  {% csrf_token %}
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="pk_test_lYpC3klMwJoufI6S2ajDtob5"
-          data-description="MoovIT"
-          data-currency="EUR"
-          data-locale="EU"
-          data-amount="65000">
-  </script>
-</form>
-
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <h6>Buy for €650.00</h6>
+            <form action="{% url 'charge' %}" method="post">
+              {% csrf_token %}
+              <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                      data-key="pk_test_lYpC3klMwJoufI6S2ajDtob5"
+                      data-description="MoovIT"
+                      data-currency="EUR"
+                      data-locale="EU"
+                      data-amount="65000">
+              </script>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
